--- a/index.html
+++ b/index.html
@@ -297,16 +297,10 @@
                                             <p>可用金额(元)<br>
                                             <em id="availablecredit">100000</em>
                                             </p>
-
-
-
 <!--                                                <div>-->
 <!--                                                    -->
 <!--                                                </div>-->
-
-
                                         </div>
-
                                     </div>
                                     <div class="col-md-6" style="text-align: center">
                                         <div >
@@ -320,16 +314,14 @@
                                                 <a id="chosenfund2">00002</a>
                                                 <i class="icon fa fa-star "  style="margin-top: 1%;margin-left:25%;font-size: 20px" onclick="canclestar()"></i>
                                             </div>
-
-
 <!--                                        <div class="right-image">-->
 <!--                                            <img src="img/right-about-image.png" alt="">-->
 <!--                                        </div>-->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </li>
-
                     </div>
                     <div class="page" id="p3">
                         <li class="icon fa fa-image"><span class="title">Our Gallery</span>
@@ -374,7 +366,7 @@
                                             <input type="text" name="search" id="searchBox" placeholder="请输入关键字">
                                             <div><button onclick="search()">搜索</button></div>
                                         </div>
-                                        <div>
+                                        <div style="padding-top: 50%">
                                             <ul>
                                                 <li>1</li>
                                             </ul>
