搜索布局修改1.0

--- a/index.html
+++ b/index.html
@@ -366,10 +366,7 @@
                                             <input type="text" name="search" id="searchBox" placeholder="请输入关键字">
                                             <div><button onclick="search()">搜索</button></div>
                                         </div>
-                                        <div style="padding-top: 50%">
-                                            <ul id="ul1">
-                                            </ul>
-                                        </div>
+
 <!--                                        <h2>Table 1</h2>-->
 <!--                                        <table id="table" class="table table-bordered table-intel">-->
 <!--                                            <thead>-->
@@ -443,6 +440,14 @@
 <!--                                            </tr>-->
 <!--                                            </tbody>-->
 <!--                                        </table>-->
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div style="padding-top: 10%">
+                                            <ul id="ul1">
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
